--- a/app/pug/blocks/_footer.pug
+++ b/app/pug/blocks/_footer.pug
@@ -4,13 +4,13 @@ footer.footer
             nav.footer__nav
                 ul.footer__ul
                     li.footer__li
-                        a.footer__link(href='#') Start Page
+                        a.footer__link(href='#header') Start Page
                     li.footer__li
-                        a.footer__link(href='#') About Us
+                        a.footer__link(href='#about') About Us
                     li.footer__li
-                        a.footer__link(href='#') Easy Money
+                        a.footer__link(href='#easy-money') Easy Money
                     li.footer__li
-                        a.footer__link(href='#') Testimonials
+                        a.footer__link(href='#testimonials') Testimonials
             .socials.footer-soc
                 a.socials__link(href='')
                     svg.footer__svg(width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg")
