--- a/app/pug/blocks/_header.pug
+++ b/app/pug/blocks/_header.pug
@@ -1,4 +1,4 @@
-header.header
+header.header#header
     .container
         .header__wrapper
             .header__logo
@@ -9,11 +9,11 @@ header.header
             nav.header__nav
                 ul.header__ul
                     li.header__li
-                        a.header__link(href='#') About Us
+                        a.header__link(href='#about') About Us
                     li.header__li
-                        a.header__link(href='#') Easy Money
+                        a.header__link(href='#easy-money') Easy Money
                     li.header__li
-                        a.header__link(href='#') Testimonials
+                        a.header__link(href='#testimonials') Testimonials
             .socials
                 a.socials__link(href='')
                     svg.socials__svg(width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg")
