--- a/app/pug/home.pug
+++ b/app/pug/home.pug
@@ -30,7 +30,7 @@ append content
         }
         ]
 
-    section.about
+    section.about#about
         .container
             .about__wrapper
                 .about__img
@@ -39,7 +39,7 @@ append content
                     .about__title About us
                     p.about__text We're a bunch of fintech coders who think you should be able to play with fake money to win real money for college. And we figured out how to do that with sponsored contests.
                     p.about__text We aim to create the largest ongoing scholarship giveaway in history.
-    section.easy-money
+    section.easy-money#easy-money
         .container
             .easy-money__wrapper
                 h1.easy-money__title.wow.fadeIn(data-wow-duration="0.3s" data-wow-delay="0") Easy Money
@@ -66,7 +66,7 @@ append content
                             button.easy__form-btn(type='submit')
                                 | JOIN the Wait List
                         p.easy__form-text Hmm, still considering joining? We promise that we don’t bite, and we’ve had all our shots.
-    section.testimonials
+    section.testimonials#testimonials
         .container
             .testimonials__wrapper
                 h1.testimonials__h1.wow.fadeIn(data-wow-duration="0.5s" data-wow-delay="0") Testimonials
@@ -81,11 +81,11 @@ append content
                                 .testimonials__item-texts
                                     .testimonials__item-title=item.name
                                     .testimonials__item-text=item.text
-                .testimonials__text.wow.fadeInUp(data-wow-duration="0.5s" data-wow-delay="0" data-wow-offset="490") Of course, none of these people actually said any of this, but we think they would. Signum City is all this, and more.
-    section.laptop
+                .testimonials__text.wow.fadeInUp(data-wow-duration="0.5s" data-wow-delay="0") Of course, none of these people actually said any of this, but we think they would. Signum City is all this, and more.
+    section.laptop#laptop
         .container
             .laptop__wrapper
-                .laptop__texts.wow.slideInLeft(data-wow-duration="0.7s" data-wow-delay="0" data-wow-offset="490")
+                .laptop__texts.wow.slideInLeft(data-wow-duration="0.7s" data-wow-delay="0")
                     .laptop__texts-text Please don’t make us beg, although
                         span  we’re not beneath that.
                     .laptop__texts-text-second You know you want those $10,000 virtual dollars.
@@ -93,7 +93,7 @@ append content
                         input.laptop__form-input(type='text' placeholder='Email' name="email")
                         button.laptop__form-btn
                             | JOIN the Wait List
-                .laptop__back.wow.slideInRight(data-wow-duration="0.7s" data-wow-delay="0" data-wow-offset="490")
+                .laptop__back.wow.slideInRight(data-wow-duration="0.7s" data-wow-delay="0")
                     img(src="img/Saignum_laptop.png")
 
 
