--- a/app/pug/blocks/_footer.pug
+++ b/app/pug/blocks/_footer.pug
@@ -6,7 +6,7 @@ footer.footer
                     li.footer__li
                         a.footer__link(href='#header') Start Page
                     li.footer__li
-                        a.footer__link(href='#about') About Us
+                        a.footer__link#aboutLink(href='#about') About Us
                     li.footer__li
                         a.footer__link(href='#easy-money') Easy Money
                     li.footer__li
