--- a/app/pug/home.pug
+++ b/app/pug/home.pug
@@ -6,7 +6,7 @@ append content
         {
             img: 'img/svg/Hamilton.svg',
             name: 'Alexander Hamilton',
-            text: 'Signum City was easy to play, easy to sign up, and they aren\'t trying to sell me anything, -ever. It is the funnest way to get money for college'
+            text: 'Signum City was easy to play, easy to sign up, and they aren\'t trying to sell me anything, ever. It is the funnest way to get money for college.'
         },
         {
             img: 'img/svg/Buddha.svg',
@@ -19,14 +19,9 @@ append content
             text: 'No need to travel and beg for college money, just sign up for Signum City and start playing now!'
         },
         {
-            img: 'img/svg/Peter.svg',
-            name: 'Saint Peter',
-            text: 'For the love of all things holy, Signum City is making it actually exciting and fun to win scholarship money for college.'
-        },
-        {
-            img: 'img/svg/Peter2.svg',
-            name: 'Saint Peter',
-            text: 'For the love of all things holy, Signum City is making it actually exciting and fun to win scholarship money for college.'
+        img: 'img/svg/Peter2.svg',
+        name: 'Saint Peter',
+        text: 'For the love of all things holy, Signum City is making it actually exciting and fun to win scholarship money for college.'
         }
         ]
 
@@ -55,7 +50,7 @@ append content
                     .easy-money__item.wow.fadeInUp(data-wow-duration="1s" data-wow-delay="0.1s")
                         img(src='img/svg/Win.svg')
                         .easy-money__item-title Win
-                        .easy-money__item-text Tell us where to send the “crap tons” of money if you wi
+                        .easy-money__item-text Tell us where to send the “crap tons” of money if you win
                 .easy-money__form
                     h2.easy-money__form-h2.wow.slideInLeft(data-wow-duration="1s" data-wow-delay="0") No boring scholarship essay!
                         br
