--- a/app/sass/components/_footer.sass
+++ b/app/sass/components/_footer.sass
@@ -90,9 +90,13 @@
     position: fixed
     right: 245px
     bottom: 87px
+    z-index: 12
 
     @include media(1024)
-      right: 20px
+      right: 62px
+
+    @include media(768)
+      right: 38px
 
     @include media(375)
       right: 2px
