--- a/app/pug/blocks/_header.pug
+++ b/app/pug/blocks/_header.pug
@@ -42,11 +42,11 @@ header.header#header
                 nav.header__mob-nav
                     ul.header__mob-ul
                         li.header__mob-li
-                            a.header__mob-link(href='#') About Us
+                            a.header__mob-link#aboutLinkMob(href='#about') About Us
                         li.header__mob-li
-                            a.header__mob-link(href='#') Easy Money
+                            a.header__mob-link(href='#easy-money') Easy Money
                         li.header__mob-li
-                            a.header__mob-link(href='#') Testimonials
+                            a.header__mob-link(href='#testimonials') Testimonials
                     .socials-mob
                         a.socials-mob__link(href='')
                             img(src='img/svg/twitter.svg')
@@ -66,10 +66,9 @@ header.header#header
                 h2.people__h2   Win scholarship money or loan repayment Beginning May 2019, 100% Free - no catch
                 h3.people__h3  Education is expensive. We want to help. Join the wait list and get 10,000 virtual dollars in your trading account.
                 form.header__form.form-send-people
-                    input.header__form-input(type='text' 'Email' name="email")
+                    input.header__form-input(autocomplete="off" type='text' placeholder='Email' name="email")
                     button.header__form-btn(type='submit')
                         | JOIN the Wait List
-
                 p.people__text We don’t spam you, but will alert you when starting awesome contests
             .people__img.wow.slideInRight(data-wow-duration="1s" data-wow-delay="0.2s")
                 img(src='img/svg/People-with-money.svg')
