--- a/app/sass/components/_header.sass
+++ b/app/sass/components/_header.sass
@@ -3,6 +3,7 @@
   display: flex
   flex-wrap: wrap
   margin: 0 auto
+  padding: 0 15px
 
   @include media(1100)
     padding: 0 18px
@@ -13,8 +14,11 @@
   background: url(../img/Background-header.png) no-repeat
   background-size: cover
 
+  @include media(768)
+    background: url(../img/Background-header768.png) no-repeat
+
   @include media(375)
-    background: url(../img/Background-header-mob.png) no-repeat
+    background: url(../img/Background-header375.png) no-repeat
     background-position-y: -70px
 
   @include media(320)
@@ -41,15 +45,23 @@
     position: absolute
     top: 0
     left: 0
-    height: 100vh
+    height: 100%
+    min-height: 710px
     width: 100%
     display: none
     background: url(../img/Background-header.png) no-repeat
     z-index: 11
 
+    @include media(768)
+      background: url(../img/Background-header768.png) no-repeat
 
     @include media(375)
-      background: url(../img/Background-header-mob.png) no-repeat
+      background: url(../img/Background-header375.png) no-repeat
+      background-position-y: -70px
+      z-index: 13
+
+    @include media(320)
+      background-position-y: -40px
 
   &__mob
     width: 100%
@@ -87,8 +99,11 @@
       margin-top: 17px
 
     @include media(375)
-      margin-top: 0
+      margin-top: -2px
       margin-bottom: 72px
+
+    @include media(320)
+      margin-top: 16px
 
   &__mob-ul
     font-family: "Open Sans", sans-serif
@@ -146,6 +161,9 @@
 .socials
   margin-left: 149px
 
+  @include media(1163)
+    margin-left: 0
+
   @include media(1027)
     display: none
 
@@ -186,9 +204,6 @@
   @include media(1024)
     margin-top: 10px
 
-  //@include media(1220)
-  //  margin: 0 auto
-
   &__title-outer
     display: flex
     flex-direction: column
@@ -207,6 +222,10 @@
     color: #fff
     max-width: 621px
 
+    @include media(968)
+      font-size: 51px
+      line-height: 63px
+
     @include media(483)
       font-size: 35px
       line-height: normal
@@ -220,8 +239,13 @@
     max-width: 563px
     letter-spacing: 0
 
+    @include media(968)
+      margin-top: 6px
+
+    @include media(411)
+      margin-top: 5px
+
     @include media(375)
-      margin-top: 17px
       font-size: 16px
       line-height: 24px
 
@@ -257,79 +281,82 @@
     margin-top: -4px
     margin-right: -91px
 
+    & img
+      @include media(910)
+        width: 100%
+
     @include media(1280)
       margin-right: 0
 
     @include media(1024)
-      width: 74%
-      margin-right: -250px
+      width: 50%
 
     @include media(768)
       display: none
 
 
-.header__form
-  display: flex
-  align-items: center
-  width: 100%
-  max-width: 540px
-  margin-top: 35px
-  background-color: #fff
-  border-radius: 60px
-  justify-content: space-between
-  border: 1px solid #CDCDCD
-  position: relative
 
-  @include media(768)
-    margin-top: 24px
-    flex-direction: column
-    background-color: transparent
-    border: 1px solid transparent
-
-  &-input
-    background: #fff
-    border-radius: 60px
-    font-family: 'Open Sans', sans-serif
-    padding: 12px 16px
-    font-weight: normal
-    font-size: 18px
-    color: #E5E5E5
-
-    &:focus .header__form
-      border: 1px solid #000
-
-    &:focus
-      color: #16A6B3
-
-    &::placeholder
-      color: #CDCDCD
-
-    &:focus::placeholder
-      color: #16A6B3
-
-    @include media(768)
-      width: 100%
-
-  &-btn
-    max-width: 240px
-    background: linear-gradient(90deg, #F86544 0%, #D83B17 100%)
-    border-radius: 60px
-    color: #fff
-    font-size: 18px
-    font-family: 'Open Sans', sans-serif
-    font-weight: bold
-    text-transform: uppercase
-    display: flex
-    width: 100%
-    justify-content: center
-    padding: 13px 0
-    left: 53%
-    margin: -2px
-    transition: .5s ease
-
-    &:hover
-      background: linear-gradient(90deg, #FF8A6F 0%, #E26447 100%)
-
-    @include media(768)
-      max-width: 100%
-      margin-top: 10px
+//.header__form
+//  display: flex
+//  align-items: center
+//  width: 100%
+//  max-width: 540px
+//  margin-top: 35px
+//  background-color: #fff
+//  border-radius: 60px
+//  justify-content: space-between
+//  border: 1px solid #CDCDCD
+//  position: relative
+//
+//  @include media(768)
+//    margin-top: 24px
+//    flex-direction: column
+//    background-color: transparent
+//    border: 1px solid transparent
+//
+//  &-input
+//    background: #fff
+//    border-radius: 60px
+//    font-family: 'Open Sans', sans-serif
+//    padding: 12px 16px
+//    font-weight: normal
+//    font-size: 18px
+//    color: #E5E5E5!important
+//
+//    &:focus .header__form
+//      border: 1px solid #000!important
+//
+//    &:focus
+//      color: #16A6B3!important
+//
+//    &::placeholder
+//      color: #CDCDCD!important
+//
+//    &:focus::placeholder
+//      color: #16A6B3!important
+//
+//    @include media(768)
+//      width: 100%
+//
+//  &-btn
+//    max-width: 240px
+//    background: linear-gradient(90deg, #F86544 0%, #D83B17 100%)
+//    border-radius: 60px
+//    color: #fff
+//    font-size: 18px
+//    font-family: 'Open Sans', sans-serif
+//    font-weight: bold
+//    text-transform: uppercase
+//    width: 100%
+//    padding: 13px 0
+//    left: 53%
+//    margin: -2px
+//    transition: .5s ease
+//    text-align: center
+//
+//    &:hover
+//      background: linear-gradient(90deg, #FF8A6F 0%, #E26447 100%)
+//
+//    @include media(768)
+//      max-width: 100%
+//      margin-top: 10px
